css/style.css
/*
*  CSS TABLE OF CONTENTS
*
*  1.0 - Resets
*  2.0 - Fonts
*  3.0 - Menu
*    3.1 - Black menu
*    3.2 - Main menu
*  4.0 - Main
*    4.1 - Cover
*    4.2 - Latest News
*    4.3 - Deals
*    4.4 - Topics
*    4.5 - Ads-deals
*  5.0 - Footer
*/

/*** 1.0 - Resets ***/

html {
  box-sizing: border-box;
  font-size: 18px;
  overflow-x: hidden;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/*** 2.0 - Fonts ***/
@font-face {
  font-family: ARS Maquette;
  src: url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.eot#iefix") format("embedded-opentype"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.woff") format("woff"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-regular.ttf") format("truetype");
  font-style: normal;
  font-weight: 400;
}

@font-face {
  font-family: ARS Maquette;
  src: url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-bold-alt.eot#iefix") format("embedded-opentype"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-bold-alt.woff") format("woff"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/ars-maquette-bold-alt.ttf") format("truetype");
  font-style: normal;
  font-weight: 700;
}

@font-face {
  font-family: Avalon;
  src: url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/avalon-bold.eot#iefix") format("embedded-opentype"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/avalon-bold.woff") format("woff"), url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/fonts/avalon-bold.ttf") format("truetype");
  font-style: normal;
  font-weight: 700;
}

body {
  font-family: 'ARS Maquette', sans-serif;
}

/*** 3.0 - Menu ***/
.tnw-logo {
  display: none;
}

nav {
  display: grid;
  margin-top: 0;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 99999;
  background: #fff;
}

/*** 3.1 - Black Menu ***/
.black-menu {
  align-items: center;
  font-family: "ARS Maquette", sans-serif;
  width: 100vw;
  height: 2rem;
  background-color: #000;
  display: flex;
}

.black-menu li {
  margin-left: 5px;
  margin-right: 5px;
}

.black-menu a {
  color: hsla(0, 0%, 100%, 0.6);
  text-decoration: none;
  font-size: 0.825rem;
}

#first-item {
  margin-left: 20px;
  color: #fff;
}

#tnw-logo {
  display: none;
}

.corporate-menu {
  display: flex;
  margin-left: auto;
  margin-right: 20px;
}

/*** 3.2 - Main Menu ***/
.main-menu {
  display: flex;
  height: 48px;
  width: 100vw;
  font-family: "Shentox", sans-serif;
  font-weight: 500;
  color: #aaa;
}

.menu {
  display: flex;
}

.main-menu li {
  padding: 18px 12px 0 12px;
  font-size: 14px;
  letter-spacing: 0.04rem;
}

.right-menu {
  margin-left: auto;
  display: flex;
  align-items: center;
  color: #545454;
  font-size: 12px;
}

.mobile-menu {
  display: none;
}

.search-button {
  border-left: 1px solid #aaa;
  padding: 16px;
}

.right-menu button {
  font-family: inherit;
  color: #fff;
  font-weight: 700;
  background-color: #0cc;
  line-height: 28px;
  border: 0;
  font-size: 11px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 3px;
  margin-left: 10px;
  margin-right: 10px;
}

.right-menu button:hover {
  background-color: #90c;
}

/*** 4.0 - Main ***/

/*** 4.1 - Cover ***/
.cover {
  margin: 0.5%;
  display: grid;
  height: 60vh;
  max-height: 560px;
  width: 99%;
  grid-gap: 10px;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas:
    " large-left-box  small-right-box-1"
    " large-left-box  small-right-box-2";
  font-family: "Avalon", sans-serif;
  font-size: 2rem;
}

.large-left-box {
  height: 100%;
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/sarah-friar-talk-gq-796x417.png);
  position: relative;
  background-position: center;
  background-size: cover;
  grid-area: large-left-box;
}

.small-right-box-1 {
  position: relative;
  grid-area: small-right-box-1;
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/tnw2020-feature_img-01.jpg);
  background-size: cover;
}

.small-right-box-2 {
  position: relative;
  background-size: cover;
  grid-area: small-right-box-2;
  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/Snag_2207d3f7-796x419.png);
}

.logo img {
  width: 25rem;
  position: absolute;
  margin: 15px 15px 15px 20px;
}

.headline-link {
  background: rgb(0, 0, 0);
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.7049019436876314) 36%, rgba(246, 74, 24, 0.7021008232394521) 100%);
  background-size: 100% 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  top: 0;
  right: 0;
}

.small-right-box-1 .headline-link {
  background: rgb(0, 0, 0);
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 38%, rgba(255, 255, 255, 0) 100%);
  background-size: 100% 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  top: 0;
  right: 0;
}

.small-right-box-2 .headline-link {
  background: rgb(0, 0, 0);
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 38%, rgba(255, 255, 255, 0) 100%);
  background-size: 100% 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  top: 0;
  right: 0;
}

.date {
  color: #fff;
  margin: 10px;
  font-size: 0.75rem;
  font-family: 'ARS Maquette', sans-serif;
  z-index: 9999;
  position: absolute;
  top: 4px;
  right: 4px;
}

.headline {
  position: absolute;
  bottom: 4px;
  left: 4px;
  right: 4px;
  color: #fff;
}

.headline h2 {
  font-size: 1.5rem;
  margin-left: 5px;
}

.headline h1 {
  font-size: 3rem;
  margin-left: 7px;
}

.under-text {
  color: white;
  font-size: 0.75rem;
  margin-left: 10px;
}

.small-right-box-1 .headline h1 {
  font-size: 1.5rem;
}
/* ... */

